# routes/cfdi.go
@@ -9,7 +9,6 @@ func RegisterRoutes(router *gin.Engine) {
 	api := router.Group("/api")
 	{
 		api.POST("/cfdi", controllers.CreateCfdi)
-		api.POST("/sandbox/cfdi", controllers.CreateTasteCfdi)
 		api.GET("/cfdi", controllers.GetCfdis)
 		api.GET("/cfdi/:id/download", controllers.DownloadFiles)
 	}
